--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
         web:
-                image: flask_port_v1
+                image: pyproj_v1
                 build: .
                 ports:
-                        - "8086:8080"
+                        - "8089:8080"
 
                 volumes:
                         - persistent_volume:/app/volumes
@@ -14,5 +14,5 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /home/ubuntu/pyproj/volumes
+      device: /vscode/pyproj/volumes
       tty: true
